# shark

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
example_visualization/: Cargo.toml  shark.toml
example_visualization/src/: lib.rs
examples/: print_colors.rs
shark/: Cargo.toml
shark-visualizer/: Cargo.toml
shark-visualizer-interface/: Cargo.toml
shark-visualizer-interface/src/: lib.rs
shark-visualizer/src/: main.rs  shader_compiler.rs  ui.rs  user_config.rs  visualization.rs
shark-visualizer/src/ui/: mod.rs  system.rs
shark-ws281x/: Cargo.toml
shark/examples/: print_colors.rs
shark/src/: lib.rs  primitives.rs  shader.rs
shark/src/point/: mod.rs  primitives.rs
shark/src/shader/: mod.rs  primitives.rs
src/: lib.rs  primitives.rs
src/point/: mod.rs
src/shader/: mod.rs
src/shader/primitives/: constant.rs  memoize.rs  mod.rs  operation.rs  pattern.rs
