[package]
name = "shark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
palette = "0.7.3"
fastrand = { version = "2.0.1" }
kiddo = { version = "5.2.2", optional = true }

[features]
default = []

memoize = ["alloc", "std", "dep:kiddo"]
alloc = []
std = []
