[package]
name = "shark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.1", default-features = false }
palette = { version = "0.7.3", default-features = false }
fastrand = { version = "2.0.1", default-features = true }
kiddo = { version = "5.2.2", optional = true }

[features]
default = ["std"]

memoize = ["alloc", "std", "dep:kiddo"]
alloc = ["fastrand/alloc", "palette/alloc"]
std = ["fastrand/std", "num/std", "palette/std"]
libm = ["palette/libm"]
