[package]
name = "example_visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shark = { path = "../shark" }
shark-visualizer-interface = { path = "../shark-visualizer-interface" }
palette = "0.7.0"