[package]
name = "shark-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
bevy = { version = "0.12.0", features = ["wayland"] }
image = "0.24.7"
palette = "0.7.3"
shark = { path = "../shark" }
rfd = "0.12.1"
cargo = "0.74.0"
libloading = "0.8.1"

[package.metadata.rust-analyzer]
rustc_private = true
