[package]
name = "shark-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
bevy = { version = "0.12.0", default_features = false, features = [
    "wayland",
    "x11",
    "default_font",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_text",
    "multi-threaded",
] }
image = "0.24.7"
palette = "0.7.3"
shark = { path = "../shark" }
rfd = "0.12.1"
cargo = "0.75.0"
libloading = "0.8.1"
toml = "0.8.8"
serde = "1.0.192"
rand = "0.8.5"
shark-visualizer-interface = { path = "../shark-visualizer-interface" }

[package.metadata.rust-analyzer]
rustc_private = true
