[package]
name = "shark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
palette = "0.7.3"
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
default = []

unstable = ["fn_trait_v2"]
fn_trait_v2 = []
